# cpp-template

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  main.cpp
.github/workflows/: bazel.yml  cmake.yml
hello-world/: BUILD
hello-world/src/: main.cpp
lib/: CMakeLists.txt
lib/printer/: BUILD  CMakeLists.txt  printer.cpp  printer.hpp
lib/printer/test/: CMakeLists.txt  mainTest.cpp
lib/printer/test/testsuits/: example_failure.cpp
test/: BUILD  CMakeLists.txt
test/testsuits/: example_success.cpp  test_printer.cpp
